@@ -3,21 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-+ pre2:
-
-- tip of the day about new plain view
-- tips of the day about new fsb features
-- insertion of { takes 2 steps to undo
-- NO -- FSB: Commands -> Encoding -> [ ] Default
-				     ---
-				     [ ] ...
-				     [ ] ...
-				     [ ] ...
-				     [ ] ...
-				     -- system encoding part of list
-- try typing foo), put cursor after foo, type some more -- slowdown
 - change indentPrevLine to indentOneLine and indentSubsequentLines
-
+- try typing foo), put cursor after foo, type some more -- slowdown
 - fsb: rename in place
 - eliminate redundant scans and events when loading buffer
 - make vfs listing faster
