@@ -1,0 +1,2 @@
+<html><body><b>View</b>&gt;<b>New Plain View</b> opens a new view without
+any docked windows or tool bars.</body></html>
