@@ -32,12 +32,10 @@ lineSep.mac=MacOS (\\r)
 
 #}}}
 
-#{{{ A list of common file encodings used in various places
+#{{{ Miscellaneous
 encodings=ASCII Cp850 Cp1251 Cp1252 ISO8859_1 ISO8859_2 ISO8859_15 \
 	MacRoman Big5 GBK KOI8_R SJIS Unicode UTF8
-#}}}
 
-#{{{ Miscellaneous
 history.caption=Previously entered strings:
 
 action-set.jEdit=Built-in Commands
@@ -1661,7 +1659,9 @@ vfs.browser.default-filter=*[^~#]
 vfs.browser.filter-enabled=true
 vfs.browser.tree.loading=Loading...
 
-#{{{ Context menu
+#{{{ Commands menu
+vfs.browser.commands.label=Commands
+
 vfs.browser.commands.close.label=Close
 vfs.browser.commands.open.label=Open
 vfs.browser.commands.open-in.label=Open in
@@ -1674,28 +1674,17 @@ vfs.browser.commands.browse-window.label=Browse in New Window
 vfs.browser.commands.choose.label=Choose
 vfs.browser.commands.delete.label=Delete...
 vfs.browser.commands.rename.label=Rename...
-#}}}
-
-#{{{ Commands menu and tool bar
-vfs.browser.commands.label=Commands
-
 vfs.browser.commands.up.label=Parent Directory
-vfs.browser.commands.up.icon=ParentDir.png
 vfs.browser.commands.reload.label=Reload Directory
-vfs.browser.commands.reload.icon=Reload.png
 vfs.browser.commands.roots.label=Local Drives
-vfs.browser.commands.roots.icon=Drive.png
 vfs.browser.commands.home.label=Home Directory
-vfs.browser.commands.home.icon=Home.png
 vfs.browser.commands.synchronize.label=Directory of Current Buffer
-vfs.browser.commands.synchronize.icon=CurrentDir.png
 vfs.browser.commands.new-file.label=New File
-vfs.browser.commands.new-file.icon=New.png
 vfs.browser.commands.new-directory.label=New Directory...
-vfs.browser.commands.new-directory.icon=NewDir.png
 vfs.browser.commands.search-in-directory.label=Search in Directory...
-vfs.browser.commands.search-in-directory.icon=FindInDir.png
 vfs.browser.commands.show-hidden-files.label=Show Hidden Files
+vfs.browser.commands.encoding.label=Encoding
+vfs.browser.commands.other-encoding.label=Other...
 #}}}
 
 #{{{ Plugins menu
@@ -1709,6 +1698,17 @@ vfs.browser.favorites.label=Favorites
 vfs.browser.favorites.add-to-favorites.label=Add to Favorites
 vfs.browser.favorites.edit-favorites.label=Edit Favorites
 vfs.browser.favorites.no-favorites.label=No Favorites
+#}}}
+
+#{{{ Tool bar
+vfs.browser.commands.up.icon=ParentDir.png
+vfs.browser.commands.reload.icon=Reload.png
+vfs.browser.commands.roots.icon=Drive.png
+vfs.browser.commands.home.icon=Home.png
+vfs.browser.commands.synchronize.icon=CurrentDir.png
+vfs.browser.commands.new-file.icon=New.png
+vfs.browser.commands.new-directory.icon=NewDir.png
+vfs.browser.commands.search-in-directory.icon=FindInDir.png
 #}}}
 
 vfs.browser.dialog.open=Open
